--- a/alpha/cityfusion_admin/templates/actions/claim_event_popup.html
+++ b/alpha/cityfusion_admin/templates/actions/claim_event_popup.html
@@ -8,7 +8,7 @@
                 <form>
                     {% csrf_token %}
                     <textarea name="message" placeholder="Write message here"></textarea>
-                    <input type="hidden" name="event_id" value="{{ event.id }}">
+                    <input type="hidden" name="event_id" value="{{ event.event_identifier }}">
                     <input type="hidden" name="account_id" value="{{ account.id }}">
                 </form>                
             </div>
