--- a/alpha/cityfusion_admin/templates/cf-admin/base.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/base.html
@@ -10,6 +10,7 @@
     <link type="text/css" href="{{STATIC_URL}}date/css/redmond/jquery-ui-1.8.23.custom.css" rel="stylesheet" />
 
     <link href="{{ STATIC_URL }}styles/accounts/signin_signup.css" type="text/css" rel="stylesheet" media="all" />
+    <link href="{{ STATIC_URL }}styles/accounts/accounts.css" type="text/css" rel="stylesheet" media="all" />
     <link href="{{STATIC_URL}}styles/browse/browse.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/browse/browse_event_list.css" rel="stylesheet" type="text/css" />
 
@@ -24,6 +25,11 @@
 
     
     <script src="{{STATIC_URL}}js/searchpad/ajax-popup.js" type="text/javascript"></script>
+    <style>
+        .tabs-container {
+            width: 100%;
+        }
+    </style>
     
     
     
@@ -54,8 +60,11 @@
                         </a>
                     </div>
                 </div>
-
                 <div class="clr"></div>
+                <br>
+                <h2>
+                    Cityfusion admin functions
+                </h2>
             </div>
         </div>       
         
