--- a/alpha/event/templates/events/_searchpad_popup_datetime_menu.html
+++ b/alpha/event/templates/events/_searchpad_popup_datetime_menu.html
@@ -91,7 +91,7 @@
                     </div>
                 </div>
                 <div class="end-date inline">
-                    Select Start Date
+                    Select End Date
                     <div class="date dropdown">
                         <input type="text" value="{% if end_date %}{{ end_date|date:"SHORT_DATE_FORMAT"}}{% else %}{% now "SHORT_DATE_FORMAT" %}{% endif %}">
                     </div>
