--- a/alpha/event/templates/events/event_description.html
+++ b/alpha/event/templates/events/event_description.html
@@ -18,7 +18,7 @@
         <meta property="og:image" content="http://{{ request.META.HTTP_HOST }}{{STATIC_URL}}images/default-event.jpg" />
     {% endif %}
     <meta property="og:site_name" content="Cityfusion" />
-    <meta property="og:description" content="{{ event.description }}" />
+    <meta property="og:description" content="{{ event.event_description }}" />
     <meta property="fb:admins" content="100000796428679" />
 
 
@@ -153,7 +153,11 @@
                         <div id="venue_map" class="map"></div>                        
                     {% endif %}
                 </div>
-                <div class="description">{{ event.description|safe }}</div>
+                <div class="description">
+                    {% if event.event_description %}
+                        {{ event.event_description|safe }}
+                    {% endif %}
+                </div>
                 <h4 class="tags">
                     {% for tag in event.tags.all %}
                         <a href="{% url 'event_browse' %}?function=tags&tag={{ tag.name|urlencode }}">
