--- a/alpha/event/templates/events/event_description.html
+++ b/alpha/event/templates/events/event_description.html
@@ -191,7 +191,7 @@
 
     <div class="secondary-content">
         <header>
-            Event at {{ event.venue.name }} in {{ event.venue.city.name_std }}
+            Events at {{ event.venue.name }} in {{ event.venue.city.name_std }}
         </header>
         <div class="content">
             <table class="secondary-content-table" celpadding="0" cellspacing="0">
@@ -214,6 +214,12 @@
                                 </td>
                             </tr>
                         {% endfor %}
+                    {% else %}
+                        <tr>
+                            <td colspan="3">
+                                No upcoming events
+                            </td>
+                        </tr>
                     {% endif %}
                 </tbody>
             </table>
