--- a/alpha/event/templates/featured/featured_event.html
+++ b/alpha/event/templates/featured/featured_event.html
@@ -23,7 +23,7 @@
                         <!-- TODO: use event date range and time range -->
                         {{ event.start_time|date:"b d, Y | fA"|title }}-{{event.end_time|date:"fA"|title}}
                     </div>
-                    <div class="feature-venue">
+                    <div class="featured-venue">
                         {{ event.venue.name }}
                     </div>
                     <div class="featured-details-link">
