Show status for featured events

--- a/alpha/cityfusion_admin/templates/cf-admin/admin-featured-events.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/admin-featured-events.html
@@ -41,7 +41,7 @@
                         {% if featured_event.active %}
                             On
                         {% else %}
-                            Off(<a href="{% url "admin_activate_featured" %}">Activate</a>)
+                            Off(<a href="{% url "admin_activate_featured" featured_event.id %}">Activate</a>)
                         {% endif %}
                     </td>
                     <td>
